# rabbitmq-tutorials

./: pyproject.toml
1_hello_world/: receive.py
2_work_queues/: new_task.py  worker.py
