[tool.poetry]
name = "rabbitmq-tutorials"
version = "0.1.0"
description = ""
authors = ["Juanse Gomez <juancgomdotpad@gmail.com>"]
readme = "README.md"
packages = [{include = "rabbitmq_tutorials"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
